--- a/impls/rustx/Cargo.toml
+++ b/impls/rustx/Cargo.toml
@@ -6,16 +6,12 @@ description = "MAL implementation for Rust"
 version = "0.1.0"
 
 [dependencies]
-#actix-web = "4.0.1"
 chrono = "0.4.19"
 dotenv = "0.15.0"
 env_logger = "0.9.0"
 lazy_static = "1.4.0"
 log = "0.4.14"
-#rand = "0.8.4"
-#regex = "1.5.4"
-#serde = "1.0.132"
-#serde_json = "1.0.73"
+rustyline = "9.1.2"
 
 [[bin]]
 name = "step0_repl"
